--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Link Me Carlos Eduardo</title>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
@@ -27,11 +29,11 @@
             </figure>
             <div class="links">
                 <ul>
-                    <li> <a class="btn" href="https://api.whatsapp.com/send?phone=5571999298550&text=Olá!&source=&data=" target="_blank"> WhatsApp</a></li>
-                    <li><a class="btn" href="https://www.linkedin.com/in/carlos-eduardo-web/">Linkedin</a> </li>
-                    <li><a class="btn" href="https://www.behance.net/kadu2010">Behance</a> </li>
-                    <li><a class="btn" href="https://codepen.io/caduweb">Codepen</a> </li>
-                    <li><a class="btn" href="https://github.com/carlosweb">GitHub</a> </li>
+                    <li> <a class="btn" href="https://api.whatsapp.com/send?phone=5571999298550&text=Olá!&source=&data=" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+                    <li><a class="btn" href="https://www.linkedin.com/in/carlos-eduardo-web/"><i class="fab fa-linkedin-in"></i> Linkedin</a> </li>
+                    <li><a class="btn" href="https://www.behance.net/kadu2010"><i class="fab fa-behance"></i> Behance</a> </li>
+                    <li><a class="btn" href="https://codepen.io/caduweb"><i class="fab fa-codepen"></i> Codepen</a> </li>
+                    <li><a class="btn" href="https://github.com/carlosweb"><i class="fab fa-github"></i> GitHub</a> </li>
                 </ul>
             </div>
         </section>
