--- a/index.html
+++ b/index.html
@@ -33,21 +33,38 @@
                 <div class="col-md-3 col-sm-12 space">
                     <a class="btn btn-outline-light btn-block" href="https://www.behance.net/kadu2010"><i class="fab fa-behance"></i> Behance</a>
                 </div>
-
-                <div class="col-md-2 col-sm-12 space">
-                    <a class="btn btn-outline-light btn-block" href="https://codepen.io/caduweb"><i class="fab fa-codepen"></i> Codepen</a>
-                </div>
-
                 <div class="col-md-2 col-sm-12 space">
                     <a class="btn btn-outline-light btn-block" href="https://github.com/carlosweb"><i class="fab fa-github"></i> GitHub</a>
+                </div>
+                <div class="col-md-2 col-sm-12 space">
+                    <button type="button" class="btn btn-outline-light btn-block" data-toggle="modal" data-target="#telaemail">
+                            <i class="fas fa-envelope"></i> Fale Conosco
+                    </button>
                 </div>
             </div>
         </div>
     </header>
 
-
-    
-    
+    <!-- Modal -->
+    <div class="modal fade" id="telaemail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Deixe sua mensagem</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                    <input type="email" class="form-control space" id="emailtxt" placeholder="Digite seu e-mail">
+                    <textarea class="form-control space" id="areatxt" rows="3" placeholder="Escreva sua mensagem"></textarea>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-block btn-primary" data-dismiss="modal">Enviar</button>
+            </div>
+          </div>
+        </div>
+    </div>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
