--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="col-md-2 col-sm-12 space">
                     <button type="button" class="btn btn-outline-light btn-block" data-toggle="modal" data-target="#telaemail">
-                            <i class="fas fa-envelope"></i> Fale Conosco
+                            <i class="fas fa-envelope"></i> Fale Comigo
                     </button>
                 </div>
             </div>
