--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="btn btn-outline-light btn-block" href="https://api.whatsapp.com/send?phone=5571999298550&text=Olá!&source=&data=" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
                 </div>
                 <div class="col-md-2 col-sm-12 space">
-                        <a class="btn btn-outline-light btn-block" href="https://www.linkedin.com/in/carlos-eduardo-web/"><i class="fab fa-linkedin-in"></i> Linkedin</a>
+                        <a class="btn btn-outline-light btn-block" href="https://www.linkedin.com/in/carlos-eduardo-web/"><i class="fab fa-linkedin-in"></i> Linkedln</a>
                 </div>
                 <div class="col-md-3 col-sm-12 space">
                     <a class="btn btn-outline-light btn-block" href="https://www.behance.net/kadu2010"><i class="fab fa-behance"></i> Behance</a>
