--- a/index.html
+++ b/index.html
@@ -26,7 +26,66 @@
 </head>
 <body>
 
-    <header>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <figure>
+                    <img class="profile" src="images/12.jfif" alt="Carlos santos web developer">
+                </figure>
+                <div class="name">
+                    <h2>Carlos Eduardo</h2>
+                    <h5>Front-end Developer</h5>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="social">
+                    <a href="https://github.com/carlosweb" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://codepen.io/caduweb" target="_blank"><i class="fab fa-codepen"></i></a>
+                    <a href="https://www.behance.net/kadu2010" target="_blank"><i class="fab fa-behance"></i></a>
+                    <a href="https://api.whatsapp.com/send?phone=5571999298550&text=Olá!&source=&data=" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.linkedin.com/in/carlos-eduardo-web/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+
+        
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="introduce">
+                    <p>Hi, I'm Carlos! I work as Front-end Developer, UX/UI and usability.</p>
+                    <h5 class="text-white">Formação</h5>
+                    <p>Universidade Estacio de Sa</p>
+                    <p>Bacharel em Sistemas de informação</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="skills">
+                    <h4>HTML5 <span>80%</span></h4>
+                    <div class="line line-1"></div>
+                    <h4>CSS3 <span>80%</span></h4>
+                    <div class="line line-2"></div>
+                    <h4>JavaScript <span>50%</span></h4>
+                    <div class="line line-3"></div>
+                    <h4>Photoshop <span>80%</span></h4>
+                    <div class="line line-4"></div>
+                    <h4>Ilustrator <span>80%</span></h4>
+                    <div class="line line-5"></div>
+                    <h4>WordPress <span>70%</span></h4>
+                    <div class="line line-6"></div>
+                    <h4>Scrum <span>60%</span></h4>
+                    <div class="line line-7"></div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+    <!-- <header>
         <div class="container">
             <figure>
                 <a href="https://www.linkedin.com/in/carlos-eduardo-web/" target="_blank">
@@ -55,10 +114,10 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
 
-    <!-- Modal -->
-    <div class="modal fade" id="telaemail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ 
+    <!-- <div class="modal fade" id="telaemail" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -76,7 +135,7 @@
             </div>
           </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
