--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="introduce">
-                    <p>Hi, I'm Carlos! I work as Front-end Developer, UX/UI and usability.</p>
+                    <p>Hi, I'm Carlos! I work as Front-end Developer, UI/UX and usability.</p>
                     <h5 class="text-white">Formação</h5>
                     <p>Universidade Estacio de Sa</p>
                     <p>Bacharel em Sistemas de informação</p>
@@ -73,7 +73,7 @@
                     <div class="line line-3"></div>
                     <h4>Photoshop <span>80%</span></h4>
                     <div class="line line-4"></div>
-                    <h4>Ilustrator <span>80%</span></h4>
+                    <h4>lllustrator <span>80%</span></h4>
                     <div class="line line-5"></div>
                     <h4>WordPress <span>70%</span></h4>
                     <div class="line line-6"></div>
